--- a/css/base.css
+++ b/css/base.css
@@ -97,7 +97,7 @@ body {
 /*スワイパー*/
 
 .swiper {
-	max-width: 100%;
+	width: 100%;
 	height: 100%;
 }
 
@@ -108,7 +108,6 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/* background-color: #FFEFD5; */
 }
 
 .swiper-slide img {
